--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <script src="plane.js"></script>
     <script src="alien.js"></script>
     <script src="game.js"></script>
+
+    <h1>hello</h1>
 </body>
 </html>
